# routegen

./: InstallScript.nsi  README.md  README.txt
deploy/: DEPRECATED.txt
deploy/linux/: deploy.sh
deploy/linux/routegen/usr/share/applications/: routegen.desktop
deploy/win/: InstallScript.nsi
installer/: create.cmd  create.sh  linux-deploy.txt  win-deploy.txt
installer/config/: config.xml  control.qs
src/: .clang-format  CMakeLists.txt  GPXSelectionDialog.cpp  GPXSelectionDialog.h  RGEditPath.cpp  RGEditPath.h  RGEditPathPoint.cpp  RGEditPathPoint.h  RGEncBmp2avi.cpp  RGEncBmp2avi.h  RGEncFFmpeg.cpp  RGEncFFmpeg.h  RGEncVideo.cpp  RGEncVideo.h  RGGPXReader.cpp  RGGPXReader.h  RGGeoTiffMapProjection.cpp  RGGeoTiffMapProjection.h  RGGoogleMap.cpp  RGGoogleMap.h  RGGoogleMapBounds.h  RGGoogleMapProjection.cpp  RGGoogleMapProjection.h  RGGraphicsObjectUndo.cpp  RGGraphicsObjectUndo.h  RGMainWindow.cpp  RGMainWindow.h  RGMap.cpp  RGMap.h  RGMapBounds.h  RGMapProjection.cpp  RGMapProjection.h  RGMapWidget.cpp  RGMapWidget.h  RGOSMTileProviderEditor.cpp  RGOSMTileProviderEditor.h  RGOSMTileProviderManager.cpp  RGOSMTileProviderManager.h  RGOSMapProjection.cpp  RGOSMapProjection.h  (+59 more)
src/cmake/Modules/: FindGeoTIFF.cmake
src/doc/: tutorial.html
src/i18n/: routegen_de.qm  routegen_de.ts  routegen_en.ts  routegen_es.qm  routegen_es.ts  routegen_fr.qm  routegen_fr.ts  routegen_it.qm  routegen_it.ts  routegen_nl.qm  routegen_nl.ts
src/tests/: tst_rgwebmercatorprojection.cpp
